Fix selected language button text colour.
The text now contrasts with the selected button, rather than being
illegible.

--- a/src/app/vocab/[sheet]/components/question-editor/question-editor.module.css
+++ b/src/app/vocab/[sheet]/components/question-editor/question-editor.module.css
@@ -18,6 +18,7 @@ div.languagetoggle span {
 
 span.active {
     background-color: rgb(var(--colour-pearl));
+    color: rgb(var(--colour-ash));
     font-weight: bold;
 }
 
